Changed movie to user

--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   },
   "author": "Robin",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.15"
-  },
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "nodemon": "^2.0.15"
   }
 }
