--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "author": "Robin",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.3",
+  "devDependencies": {
     "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "express": "^4.17.3"
   }
 }
