--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "description": "Programmeren 4 SAM server",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev" : "nodemon index.js",
+    "test": "mocha test/**/*.test.js"
   },
   "author": "Robin",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "mocha": "^9.2.2",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "express": "^4.17.3"
+    "body": "^5.1.0",
+    "body-parser": "^1.20.0",
+    "express": "^4.17.3",
+    "parser": "^0.1.4"
   }
 }
