--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev" : "nodemon index.js",
+    "dev": "nodemon index.js",
     "test": "mocha test/**/*.test.js"
   },
   "author": "Robin",
@@ -19,7 +19,8 @@
   "dependencies": {
     "body": "^5.1.0",
     "body-parser": "^1.20.0",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "parser": "^0.1.4"
+    "mysql": "^2.18.1"
   }
 }
