--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: share-a-meal-thijs
-          heroku_email: traaijmakers32@gmail.com
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
