--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "mocha test/**/*.test.js"
+    "test": "mocha test/**/*.test.js --exit"
   },
   "author": "Robin",
   "license": "ISC",
