Added authorization using JWT

--- a/.env
+++ b/.env
@@ -3,5 +3,8 @@ PORT=3000
 DB_HOST=localhost
 DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=1t2h3i4j5s
 DB_DATABASE=share-a-meal
+
+JWT_SECRET=testmessage
+LOGLEVEL=trace
