--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body": "^5.1.0",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.0",
